--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -9,5 +9,14 @@ jobs:
         steps:
             - name: Checkout Code
               uses: actions/checkout@v4
-            - name: Printing Folders
-              run: ls -R # Print Folder Structure after Checkout
+            # - name: Printing Folders
+            #   run: ls -R # Print Folder Structure after Checkout
+            - name: Setup Node
+              uses: actions/setup-node@v4
+              with:
+                node-version: '20.x'
+            - name: Install Dependencies
+              working-directory: 04-using-action/react-app
+              run: npm ci
+
+
