--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -7,6 +7,9 @@ on:
 jobs:
     build:
         runs-on: ubuntu-latest
+        defaults:
+            run:
+              working-directory: 04-using-actions/react-app
         steps:
             - name: Checkout Code
               uses: actions/checkout@v4
@@ -17,10 +20,8 @@ jobs:
               with:
                 node-version: '20.x'
             - name: Install Dependencies
-              working-directory: 04-using-actions/react-app
               run: npm ci
             - name: Run Unit Tests
-              working-directory: 04-using-actions/react-app
               run: npm run test
 
 
