feat(05-2-filters-activity-types): Add echo command

--- a/.github/workflows/05-2-filters-activity-types.yaml
+++ b/.github/workflows/05-2-filters-activity-types.yaml
@@ -9,4 +9,4 @@ jobs:
     echo:
         runs-on: ubuntu-latest
         steps:
-            - run: 'Running whenever a PR is closed'
+            - run: echo 'Running whenever a PR is closed'
