--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -1,6 +1,5 @@
 name: 06 - Contexts
 run-name: 06 - Contexts | DEBUG - ${{inputs.debug}} 
-
 on:
     push:
     workflow_dispatch:
@@ -8,10 +7,15 @@ on:
             debug:
                 type: boolean
                 default: false
-
+env:
+    MY_WORKFLOW_VAR: 'workflow'
+    MY_OVERWRITTEN_VAR: 'workflow'
 jobs:
     echo-data:
         runs-on: ubuntu-latest
+        env:
+            MY_JOB_VAR: 'job'
+            MY_OVERWRITTEN_VAR: 'job'
         steps:
             - name: Display Information
               run: |
@@ -25,3 +29,14 @@ jobs:
             - name: Retrieve Variable
               run: |
                 echo "$MY_VAR: ${{vars.MY_VAR}}"
+            - name: Print Env Variables
+              env:
+                MY_OVEWRITTEN_VAR: 'step'
+              run: |
+                echo "Workflow env: ${{env.MY_WORKFLOW_VAR}}"
+                echo "Overwritten env: ${{env.MY_OVERWRITTEN_VAR}}"
+            - name: Print Env Variables
+              run: |
+                echo "Workflow env: ${{env.MY_WORKFLOW_VAR}}"
+                echo "Overwritten env: ${{env.MY_OVERWRITTEN_VAR}}"
+
