feat(06-contexts): fix typo

--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -31,7 +31,7 @@ jobs:
                 echo "$MY_VAR: ${{vars.MY_VAR}}"
             - name: Print Env Variables
               env:
-                MY_OVEWRITTEN_VAR: 'step'
+                MY_OVERWRITTEN_VAR: 'step'
               run: |
                 echo "Workflow env: ${{env.MY_WORKFLOW_VAR}}"
                 echo "Overwritten env: ${{env.MY_OVERWRITTEN_VAR}}"
