--- a/.github/workflows/07-expressions.yaml
+++ b/.github/workflows/07-expressions.yaml
@@ -1,4 +1,6 @@
 name: 07 - Using Expressions
+run-name: |
+    07 - Using Expressions | DEBUG - <${{inputs.debug == true && 'ON' || 'OFF'}}>
 on:
     push:
     workflow_dispatch:
