--- a/.github/workflows/09-functions.yaml
+++ b/.github/workflows/09-functions.yaml
@@ -8,7 +8,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Sleep for 20 seconds
-              run: sleep(20)
+              run: sleep 20
             - name: Failing step
               run: exit(1)
             - name: I will be skipped
