--- a/.github/workflows/09-functions.yaml
+++ b/.github/workflows/09-functions.yaml
@@ -10,7 +10,9 @@ jobs:
             - name: Print PR title
               run: echo "${{github.event.pull_request.title}}"
             - name: Print PR labels 
-              run: echo "${{github.event.pull_request.labels}}"
+              run: |
+                cat << EOF
+                ${{toJson(github.event.pull_request.labels)}} 
             - name: Bug step
               if: ${{failure() && contains(github.event.pull_request.title, 'fix')}}
               run: echo "I am a bug fix"
