--- a/.github/workflows/12-outputs.yaml
+++ b/.github/workflows/12-outputs.yaml
@@ -23,7 +23,7 @@ jobs:
         runs-on: ubuntu-latest
         needs:
             - build
-        if: ${{needs.build.outputs.name == 'success'}}"
+        if: ${{needs.build.outputs.name == 'success'}}
         steps:
             - name: Deploy
               run: echo "Deploying..."
