--- a/.github/workflows/12-outputs.yaml
+++ b/.github/workflows/12-outputs.yaml
@@ -12,7 +12,7 @@ jobs:
     build:
         runs-on: ubuntu-latest
         outputs:
-            name: ${{steps.build.outputs.status}}
+            build-status: ${{steps.build.outputs.status}}
         steps:
             - name: Print GITHUB_OUTPUT path
               run: echo "$GITHUB_OUTPUT"
@@ -23,7 +23,7 @@ jobs:
         runs-on: ubuntu-latest
         needs:
             - build
-        if: ${{needs.build.outputs.name == 'success'}}
         steps:
             - name: Deploy
+              if: ${{needs.build.outputs.build-status == 'success'}}
               run: echo "Deploying..."
