--- a/.github/workflows/13-caching.yaml
+++ b/.github/workflows/13-caching.yaml
@@ -6,6 +6,12 @@ on:
                 description: Whether to execute cache step
                 type: boolean
                 default: true
+            node-version:
+                description: Node version
+                type: choice
+                options: [18.x, 20.x, 21.x]
+                default: 20.x
+
 jobs:
     build:
         defaults:
@@ -19,7 +25,15 @@ jobs:
               uses: actions/setup-node@v4
               with:
                 node-version: '20.x'
+            - name: Download cached dependencies
+              if: ${{inputs.use-cache}}
+              uses: actions/cache@v3
+              id: cache
+              with:
+                path: 13-caching/react-app/node_modules
+                key: deps-node-modules-${{hashFiles('13-caching/react-app/package-lock.json')}}
             - name: Install dependencies
+              if: steps.cache.outputs.cache-hit != 'true'
               run: npm ci
             - name: Testing
               run: npm run test
