--- a/.github/workflows/14-artifacts.yaml
+++ b/.github/workflows/14-artifacts.yaml
@@ -21,7 +21,7 @@ jobs:
                 path: 14-artifacts/react-app/node_modules
                 key: "deps-node-modules-${{hashFiles('14-artifacts/react-app/package-lock.json')}}"
             - name: Install dependencies
-              if: steps.cache.outputs.cache-hit != true
+              if: steps.cache.outputs.cache-hit != 'true'
               run: npm ci
             - name: Unit tests
               run: npm run test
@@ -41,4 +41,6 @@ jobs:
               with:
                 name: app
                 path: build
+            - name: Show folder structure
+              run: ls -R
             # - name:
