--- a/.github/workflows/15-matrices.yaml
+++ b/.github/workflows/15-matrices.yaml
@@ -32,3 +32,21 @@ jobs:
               shell: bash
             - name: Upload test results
               run: echo "Uploading test results"
+    include-example: 
+        name: ${{matrix.color}}-${{matrix.shape}}-${{matrix.size}}
+        runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                color: [red, green]
+                shape: [circle, square]
+                size: [small, large]
+                include:
+                    - color: red
+                      shape: triangle
+        steps:
+            - name: Print Combinations
+              run: | 
+                echo "${{matrix.color}}-${{matrix.shape}}-${{matrix.size}}"
+
+             
+
