--- a/.github/workflows/15-matrices.yaml
+++ b/.github/workflows/15-matrices.yaml
@@ -5,7 +5,7 @@ jobs:
     backwards-compatibility:
         name: ${{matrix.os}}-${{matrix.node-version}}
         strategy:
-            fail-fast: true # If any job fails all jobs stop
+            fail-fast: false # If any job fails all jobs stop
             matrix:
                 node-version: [20.x, 21.x]
                 os: [ubuntu-latest, windows-latest]
@@ -47,6 +47,3 @@ jobs:
             - name: Print Combinations
               run: | 
                 echo "${{matrix.color}}-${{matrix.shape}}-${{matrix.size}}"
-
-             
-
