--- a/.github/workflows/15-matrices.yaml
+++ b/.github/workflows/15-matrices.yaml
@@ -8,7 +8,7 @@ jobs:
             fail-fast: false # If any job fails all jobs stop
             matrix:
                 node-version: [20.x, 21.x]
-                os: [ubuntu-latest, windows-latest]
+                os: [ubuntu-latest]
                 include:
                     - os: ubuntu-latest
                       node-version: 16.x
@@ -33,7 +33,7 @@ jobs:
             - name: Upload test results
               run: echo "Uploading test results"
     include-example: 
-        name: ${{matrix.color}}-${{matrix.shape}}-${{matrix.size}}
+        name: ${{matrix.color}}-${{matrix.shape}}-${{matrix.size}}-${{matrix.opacity}}
         runs-on: ubuntu-latest
         strategy:
             matrix:
@@ -41,9 +41,10 @@ jobs:
                 shape: [circle, square]
                 size: [small, large]
                 include:
+                    - opacity: 50
                     - color: red
                       shape: triangle
         steps:
             - name: Print Combinations
               run: | 
-                echo "${{matrix.color}}-${{matrix.shape}}-${{matrix.size}}"
+                echo "${{matrix.color}}-${{matrix.shape}}-${{matrix.size}}-${{matrix.opacity}}"
