--- a/.github/workflows/16-environments.yaml
+++ b/.github/workflows/16-environments.yaml
@@ -18,7 +18,7 @@ jobs:
         steps:
             - name: E2E tests
               run: echo "Running E2E"
-    deploy-prod:
+    deploy-prod-frontend:
         needs: e2e-tests
         runs-on: ubuntu-latest
         environment: prod 
@@ -28,6 +28,15 @@ jobs:
         steps:
             - name: Echo vars
               run: |
-                echo "Deploying to prod"
-
-
+                echo "Deploying to prod frontend"
+    deploy-prod-backend:
+        needs: e2e-tests
+        runs-on: ubuntu-latest
+        environment: prod 
+        env: 
+            my-env-value: ${{vars.MY_ENV_VALUE || 'default value'}}
+            default: 'default value'
+        steps:
+            - name: Echo vars
+              run: |
+                echo "Deploying to prod backend"
