--- a/.github/actions/composite-cache-deps/action.yaml
+++ b/.github/actions/composite-cache-deps/action.yaml
@@ -21,7 +21,7 @@ runs:
       id: cache
       with:
         path: ${{ inputs.working-dir }}/node_modules
-        key: "deps-node-modules-${{ hashFiles(format('{0}{1}', inputs.working-dir, 'package-lock.json')) }}"
+        key: "deps-node-modules-${{ hashFiles(format('{0}/{1}', inputs.working-dir, 'package-lock.json')) }}"
     - name: Install dependencies
       if: steps.cache.outputs.cache-hit != true
       run: npm ci
