--- a/.github/workflows/17-1-custom-actions-composite.yaml
+++ b/.github/workflows/17-1-custom-actions-composite.yaml
@@ -24,4 +24,4 @@ jobs:
             - name: Test
               run: npm run test
             - name: Build 
-              run: npm build
+              run: npm run build
