--- a/.github/actions/composite-cache-deps/action.yaml
+++ b/.github/actions/composite-cache-deps/action.yaml
@@ -26,7 +26,7 @@ runs:
       id: cache
       with:
         path: ${{ inputs.working-dir }}/node_modules
-        key: "deps-node-modules-${{ hashFiles(format('{0}/{1}', inputs.working-dir, 'package-lock.json')) }}"
+        key: "deps-node-modules-${{inputs.target-env}}-${{ hashFiles(format('{0}/{1}', inputs.working-dir, 'package-lock.json')) }}"
     - name: Install dependencies
       if: steps.cache.outputs.cache-hit != true
       run: ${{inputs.target-env == 'dev' && 'npm ci' || 'npm ci --omit=dev'}} 
