feat(17-2-custom-actions-js): add getBooleanInput

--- a/.github/actions/js-dependency-update/action.yaml
+++ b/.github/actions/js-dependency-update/action.yaml
@@ -17,7 +17,8 @@ inputs:
         description: "Authentication token with repository access. Must have write access to contents and pull-requests"
         required: true
     debug:
-
+        description: "Whether the output debug messages to the console"
+        default: 'false'
 
 runs:
     using: node20
