add correct working directory

--- a/.github/workflows/17-2-custom-actions-js.yaml
+++ b/.github/workflows/17-2-custom-actions-js.yaml
@@ -1,17 +1,19 @@
 name: 17 - 2 - Custom Actions - JS
 run-name: |
-    17 - 2- Custom Actions - JS - Base Branch ${{inputs.base-branch}}
-    - Target Branch ${{inputs.target-branch}} - Work Dir ${{inputs.working-dir}}
+    17 - 2- Custom Actions - JS|BB ${{inputs.base-branch}} - TB ${{inputs.target-branch}} - WD ${{inputs.working-dir}}
 
 on:
     workflow_dispatch:
         inputs:
             base-branch: 
                 type: string
+                default: main
             target-branch:
                 type: string
+                default: update-dependencies
             working-dir:
                 type: string
+                default: 17-custom-actions/react-app
             debug:
                 type: boolean
 jobs:
