feat(17-2-custom-actions-js): code refactor

--- a/.github/workflows/17-2-custom-actions-js.yaml
+++ b/.github/workflows/17-2-custom-actions-js.yaml
@@ -1,13 +1,13 @@
 name: 17 - 2 - Custom Actions - JS
 run-name: |
-    17 - 2- Custom Actions - JS | BB ${{inputs.base-branch}} - TB ${{inputs.target-branch}} - WD ${{inputs.working-dir}}
+    17 - 2- Custom Actions - JS | BB ${{inputs.base-branch}} - TB ${{inputs.head-branch}} - WD ${{inputs.working-dir}}
 on:
     workflow_dispatch:
         inputs:
             base-branch: 
                 type: string
                 default: main
-            target-branch:
+            head-branch:
                 type: string
                 default: update-dependencies
             working-dir:
@@ -15,6 +15,7 @@ on:
                 default: 17-custom-actions/react-app
             debug:
                 type: boolean
+                default: false
 permissions:
     contents: write
     pull-requests: write
@@ -28,11 +29,6 @@ jobs:
               with:
                 gh-token: ${{secrets.GITHUB_TOKEN}}
                 base-branch: ${{inputs.base-branch}}
-                target-branch: ${{inputs.target-branch}}
+                head-branch: ${{inputs.head-branch}}
                 working-directory: ${{inputs.working-dir}}
                 debug: ${{inputs.debug}}
-                
-
-
-
-    
