--- a/.github/actions/docker-ping-url/Dockerfile
+++ b/.github/actions/docker-ping-url/Dockerfile
@@ -5,4 +5,4 @@ COPY requirements.txt .
 RUN python -V
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
-CMD [ "python", "app/main.py"]
+CMD [ "python", "/app/main.py"]
