--- a/.github/workflows/17-3-custom-actions-docker.yaml
+++ b/.github/workflows/17-3-custom-actions-docker.yaml
@@ -3,8 +3,14 @@ on:
     workflow_dispatch:
         inputs:
             url:
-                type: string
-                default: 'https://www.google.com'
+                type: choice
+                options: ['https://www.google.com', 'https://doesnt-exist-maybe.com']
+            max_trials:
+                description: "Maximum trials until action fails"
+                default: '5'
+            delay:
+                description: Delay in seconds between trials
+                default: '3'
 jobs:
     ping-url:
         runs-on: ubuntu-latest
@@ -14,3 +20,5 @@ jobs:
               uses: ./.github/actions/docker-ping-url
               with:
                 url: ${{inputs.url}}
+                max_trials: ${{inputs.max_trials}}
+                delay: ${{inputs.delay}}
