feat(17-custom-actions) add output to composite action

--- a/.github/actions/composite-cache-deps/action.yaml
+++ b/.github/actions/composite-cache-deps/action.yaml
@@ -13,7 +13,10 @@ inputs:
     description: '"dev" or "prod". Controls whether dev dependencies are installed'
     default: dev
     required: false
-
+outputs:
+  installed-deps:
+    description: 'Whether dependencies were installed or not'
+    value: ${{steps.cache.outputs.cache-hit != 'true'}}
 runs:
   using: composite
   steps:
